--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ version = "0.0.1"
 authors = [
   { name="Felipe Moreno", email="felipe@flpm.dev" },
 ]
-description = "A python template package"
+description = "A template for Python projects"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [ # For a list of valid classifiers, see https://pypi.org/classifiers/
