--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ license = {file = "LICENSE"}
 
 [project.optional-dependencies]
 dev = ["pre-commit>=2.20.0"]
-test = ["coverage", "pytest", "pytest-cov"]
+test = ["pytest>=7.2.1", "pytest-cov>=4.0.0", "pytest-mock>=3.10.0", "pytest-randomly>=3.12.0", "requests-mock>=1.11.0"]
 
 [project.urls]
 Homepage = "https://github.com/flpm/python-template"
